[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
dolly = "*"
directx_math = "*"
glam = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"
metal = "*"
core-graphics-types = "*"
cocoa = "*"