[package]
name = "window"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
dolly = "*"
glam = "*"
gltf = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"
core-graphics-types = "*"
cocoa = "*"

[target.'cfg(target_os = "macos")'.dependencies.metal]
version = "0.23.1"
features = ["mps"]